--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "file-system": "^2.2.2",
     "http": "0.0.0",
     "https": "^1.0.0",
     "request": "^2.88.0",
