--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "beautify-json": "^1.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "http": "0.0.0",
     "https": "^1.0.0",
+    "json-beautify": "^1.1.1",
     "md5": "^2.2.1",
     "request": "^2.88.0",
     "socket.io": "^2.3.0"
