--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "beautify-json": "^1.0.1",
     "body-parser": "^1.19.0",
+    "color": "^3.1.2",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "http": "0.0.0",
